--- a/data/en/intro.yaml
+++ b/data/en/intro.yaml
@@ -3,4 +3,4 @@ title:
 
 description:
 - line: 'This is how I roll'
-# this is the place to modify the title
+# this is the place to modify the title of the whole page
