--- a/data/en/contactinfo.yaml
+++ b/data/en/contactinfo.yaml
@@ -1,9 +1,10 @@
 contactformaction: 'post-action'
 
 address:
-- line: '1234 Somewhere Road #87257'
-- line: 'Nashville, TN 00000-0000'
+- line: 'Statistics Department'
+- line: 'Columbia University in the city of New York'
 
-phone: '(800) 000-0000'
 
-email: 'someone@untitled.tld'
+phone: '(917) 515-8074'
+
+email: 'ml4076@columbia.edu'
