--- a/config.toml
+++ b/config.toml
@@ -50,9 +50,9 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
   since = "2017"            # Site creation time          # 站点建立时间
 
   # site info (optional)                                  # 站点信息（可选，不需要的可以直接注释掉）
-  logoTitle = "Shixiang Wang"        # default: the title value    # 默认值: 上面设置的title值
+  logoTitle = "Generative Learning"        # default: the title value    # 默认值: 上面设置的title值
   keywords = ["Hugo", "theme","even"]
-  description = "Blog Website of Shixiang Wang"
+  description = "Blog Website of Ming Li"
 
   # paginate of archives, tags and categories             # 归档、标签、分类每页显示的文章数目，建议修改为一个较大的值
   archivePaginate = 100
