--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-.Rproj.user 
-.Rhistory 
+.Rproj.user
+.Rhistory
 .RData
 .Ruserdata
-public
-static/figures
-blogdown
-.Rproj.user
+public/*
+*.sqlite
+Reference/*
